// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article Flag test on ios renders Exclusive flag correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "marginBottom": 1,
        "marginRight": 5,
      }
    }
  >
    <svg
      height={8}
      width={8}
    >
      <g
        fill="#C51D24"
      >
        <path />
      </g>
    </svg>
  </View>
  <Text
    accessibilityLabel="flag-exclusive"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#C51D24",
        "fontFamily": "TimesDigitalW04-RegularSC",
        "fontSize": 12,
        "fontWeight": "400",
        "letterSpacing": 1.4,
      }
    }
    testID="flag-exclusive"
  >
    exclusive
  </Text>
</View>
`;

exports[`Article Flag test on ios renders New flag correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "marginBottom": 1,
        "marginRight": 5,
      }
    }
  >
    <svg
      height={8}
      width={8}
    >
      <g
        fill="#E34605"
      >
        <path />
      </g>
    </svg>
  </View>
  <Text
    accessibilityLabel="flag-new"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#E34605",
        "fontFamily": "TimesDigitalW04-RegularSC",
        "fontSize": 12,
        "fontWeight": "400",
        "letterSpacing": 1.4,
      }
    }
    testID="flag-new"
  >
    new
  </Text>
</View>
`;

exports[`Article Flag test on ios renders Sponsored flag correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "marginBottom": 1,
        "marginRight": 5,
      }
    }
  >
    <svg
      height={8}
      width={8}
    >
      <g
        fill="#4D4D4D"
      >
        <path />
      </g>
    </svg>
  </View>
  <Text
    accessibilityLabel="flag-sponsored"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#4D4D4D",
        "fontFamily": "TimesDigitalW04-RegularSC",
        "fontSize": 12,
        "fontWeight": "400",
        "letterSpacing": 1.4,
      }
    }
    testID="flag-sponsored"
  >
    sponsored
  </Text>
</View>
`;

exports[`Article Flag test on ios renders Updated flag correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "marginBottom": 1,
        "marginRight": 5,
      }
    }
  >
    <svg
      height={8}
      width={8}
    >
      <g
        fill="#3C81BE"
      >
        <path />
      </g>
    </svg>
  </View>
  <Text
    accessibilityLabel="flag-updated"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#3C81BE",
        "fontFamily": "TimesDigitalW04-RegularSC",
        "fontSize": 12,
        "fontWeight": "400",
        "letterSpacing": 1.4,
      }
    }
    testID="flag-updated"
  >
    updated
  </Text>
</View>
`;

exports[`Article Flag test on ios renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "marginBottom": 1,
        "marginRight": 5,
      }
    }
  >
    <svg
      height={8}
      width={8}
    >
      <g
        fill="black"
      >
        <path />
      </g>
    </svg>
  </View>
  <Text
    accessibilityLabel="flag-articleFlag"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "black",
        "fontFamily": "TimesDigitalW04-RegularSC",
        "fontSize": 12,
        "fontWeight": "400",
        "letterSpacing": 1.4,
      }
    }
    testID="flag-articleFlag"
  >
    articleflag
  </Text>
</View>
`;
